@startuml

class MTGContext
class ControllerBase
class IdentityDbContext


class Card {
    + CardId: int
    + ScryfallId: Guid
    + Name: string
    + OracleText: string
    + ImageUri: string
}

class CardFace {
    + CardFaceId: int
    + Name: string
    + OracleText: string
    + ImageUri: string
    + CardId: int
}

class RelatedCard {
    + RelatedCardId: int
    + Name: string
    + ImageUri: string
}

class CardDto {
    + CardId: int
    + ScryfallId: Guid
    + Name: string
    + OracleText: string
    + ImageUri: string
}

class CardFaceDto{
    + CardFaceId: int
    + Name: string
    + OracleText: string
    + ImageUri: string
    + CardId: int
}

class RelatedCardDto{
    + RelatedCardId: int
    + Name: string
    + ImageUri: string
}

class MtgController {
    + IsOwnerOrAdmin(resourceApiUserId: string) : bool
    # {static} ToCardDto(card: Card) : CardDto
}

class CardsController {
    - context: MTGContext

    + CardsController(context: MTGContext)
    + GetCardByName(cardName: string) : Task<ActionResult<CardDto>>
}

Card "1" o-- "0..1" CardFace : AltFace
Card "1" o-- "*" RelatedCard : RelatedCards

CardDto "1" o-- "0..1" CardFaceDto : AltFace
CardDto "1" o-- "*" RelatedCardDto : RelatedCards

CardsController --|> MtgController
MtgController --|> ControllerBase
MTGContext --|> IdentityDbContext

CardsController --> MTGContext : uses
CardsController ..> Card : queries

CardsController ..> CardDto : returns


@enduml